@@ -60,6 +60,33 @@
 
     <profiles>
         <profile>
+            <id>jdk21</id>
+            <activation>
+                <jdk>21</jdk>
+            </activation>
+            <properties>
+                <surefire.argLine>
+                    --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                    --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.x509=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.action=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.provider=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.provider.certpath=ALL-UNNAMED
+                    --add-exports=java.base/sun.net.util=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.util=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.jca=ALL-UNNAMED
+                    --add-exports=jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED
+                    --add-exports=java.base/sun.security.rsa=ALL-UNNAMED
+                </surefire.argLine>
+            </properties>
+        </profile>
+        <profile>
             <id>jdk17</id>
             <activation>
                 <jdk>17</jdk>
